fix(skills): release reviewed catalog as v1.5.1
Correct technical guidance and evidence requirements across the skill catalog, update package integrity and reference declarations, and align workspace and CLI versions for release.