@@ -10,12 +10,40 @@
 Capture URL, retrieval date, JEP status/target and exact build. A proposed target can move; an
 Integrated JEP in a future release is not functionality in an older supported release.
 
+### Verified snapshot: 2026-09-05
+
+[JEP 401: Value Objects (Preview)](https://openjdk.org/jeps/401) and
+[JEP 539: Strict Field Initialization in the JVM (Preview)](https://openjdk.org/jeps/539)
+both report **Integrated**, release **28**. The project page directs experiments to
+[JDK 28 EA](https://jdk.java.net/28/), whose page listed build 14 dated 2026-09-03.
+This is integration into an EA release line, not GA delivery or a backport to standard JDK 25/27.
+Recheck these headers before repeating the status; verify inclusion in the particular binary.
+
+The separate [Valhalla EA download page](https://jdk.java.net/valhalla/) still lists
+`27-jep401ea3+1-1` dated 2026-03-11. Its JDK 27 basis does not establish a JDK 27 GA feature.
+Use its documentation for that historical prototype, not current JEP syntax by assumption.
+The project lists null-restricted storage, primitive integration and generic specialization
+as separate work; integration of JEP 401 does not deliver all of Valhalla.
+
+JEP 401 documents compilation with `javac --release 28 --enable-preview Main.java` and
+execution with `java --enable-preview Main` on a supporting JDK 28 build. These are conditional
+experiment commands, not instructions to upgrade the project. Preview class files require
+the corresponding release and preview-enabled execution; do not mix compiler/runtime releases
+or copy old prototype flags without checking that build.
+
+The current proposal changes identity semantics, including `==`, but explicitly does not make
+`==` a replacement for `equals`. Value fields are final; references can still point to mutable
+identity objects. Null-restricted layouts and specialized generics are not implied by declaring
+a value class. Test synchronization, reference/identity APIs and serialization/native integration
+against the exact design rather than assuming source compatibility means behavioral compatibility.
+
 ## Experiment record
 
 ```text
 question and decision:
 baseline and Valhalla representation:
 JDK vendor/version/build/commit, OS and architecture:
+supported-JDK baseline, EA identity-class control, EA value-class treatment:
 preview/compiler/runtime flags:
 semantic assertions:
 layout evidence and flattening observation:
@@ -30,3 +58,14 @@ sequentially allocated object array can already have favourable locality; add ra
 access when pointer chasing is the hypothesis. Prevent setup allocation from being mistaken for
 hot-path allocation, and do not attribute an unexplained tie to escape analysis without compiler or
 allocation evidence.
+
+Check that JOL, profilers, instrumentation agents and benchmark tooling support the EA class-file
+format and layout. An unsupported layout probe is missing evidence, not proof of unflattened
+storage. Separate retained heap, transient allocation and process memory; less allocation need
+not mean a smaller retained graph. Include arrays, nullable fields, erased containers and
+cross-method calls only when they occur in the proposed use, since representation can differ.
+
+Run semantic assertions before benchmarks: compare equal field values, unequal references inside
+value fields, null handling and the identity-sensitive operations the application uses. Then test
+the same useful work with realistic access/locality and thread safety. A faster EA treatment does
+not establish a production gain, a portable layout guarantee or compatibility of untested libraries.
